--- a/.gitignore
+++ b/.gitignore
@@ -54,7 +54,7 @@ coverage.xml
 # Django stuff:
 *.log
 local_settings.py
-db.sqlite3
+*.sqlite3
 
 # Flask stuff:
 instance/
@@ -105,3 +105,6 @@ venv.bak/
 
 # PyCharm project files
 .idea
+
+# old Dev files
+*.old
